--- a/src/app/components/experiencia/experiencia.component.html
+++ b/src/app/components/experiencia/experiencia.component.html
@@ -1,22 +1,9 @@
 <section class="section container">
     <h3 class="section__title">Experiencia</h3>
 
-    <article class="section__item">
-      <div class="section__ico">
-        <img
-          src="https://media-exp1.licdn.com/dms/image/C4E0BAQHhtk2LatymBA/company-logo_200_200/0/1627578903617?e=1655337600&v=beta&t=ipqhwzbU5MdL-BCRlJZqfIWIZaA67K9jhogt1NIxKi8"
-          alt=""
-        />
-      </div>
-      <div class="section__info">
-        <div class="section__job">Senior Sound Designer/Composer</div>
-        <div class="section__description">
-          Composición de música original y diseño de sonido para publicidades
-          y cine.
-        </div>
-        <div class="section__period">feb. 2021 - ene. 2022</div>
-      </div>
-    </article>
+    <!--Item component-->
+    <app-section-item></app-section-item>
+    
 
     <article class="section__item">
       <div class="section__ico">
