Detalles de sombras y márgenes
Detalles de sombras y márgenes

--- a/src/app/components/banner/banner.component.css
+++ b/src/app/components/banner/banner.component.css
@@ -8,3 +8,9 @@
   background-image: url(../../../assets/banner.jpg);
   background-size: cover;
 }
+
+@media only screen and (min-width: 768px) {
+  .banner {
+    margin-top: 1em;
+  }
+}
