--- a/src/app/components/header/header.component.css
+++ b/src/app/components/header/header.component.css
@@ -1,6 +1,7 @@
 nav {
   width: 100%;
   background-color: var(--primary);
+  height: auto;
 }
 
 .nav {
@@ -8,7 +9,6 @@ nav {
   justify-content: space-between;
   align-items: center;
   position: relative;
-  z-index: 2;
   height: 3.7em;
 }
 
@@ -37,4 +37,27 @@ nav {
   text-decoration: none;
   color: var(--light);
   margin: auto 0.5em;
+}
+
+@media only screen and (min-width: 480px) {
+  .nav__logo-text {
+    display: block;
+    color: var(--light);
+    font-size: 1em;
+    font-weight: 500;
+    margin-left: 0.7em;
+  }
+}
+
+@media only screen and (min-width: 768px) {
+
+  .nav__links > a {
+    text-decoration: none;
+    color: var(--light);
+    margin: auto 0.7em;
+  }
+
+  nav {
+    box-shadow: 5px 0px 15px 5px rgba(0,0,0,0.3);
+  }
 }
