--- a/src/app/components/skills/skills.component.html
+++ b/src/app/components/skills/skills.component.html
@@ -1,24 +1,50 @@
 <section class="section container">
     <h3 class="section__title">Habilidades</h3>
 
-    <div class="skills__item">
-      <div class="section__job">HTML</div>
-      <div class="skills__container">
-        <div class="skills__percentage html">80%</div>
-      </div>
-    </div>
+      <div class="skills__grid">
 
-    <div class="skills__item">
-      <div class="section__job">CSS</div>
-      <div class="skills__container">
-        <div class="skills__percentage css">90%</div>
-      </div>
-    </div>
+        <div class="skills__item">
+          <div class="skill__name">HTML</div>
+          <div class="skills__container">
+            <div class="skills__percentage html">80%</div>
+          </div>
+        </div>
+    
+        <div class="skills__item">
+          <div class="skill__name">CSS</div>
+          <div class="skills__container">
+            <div class="skills__percentage css">90%</div>
+          </div>
+        </div>
+    
+        <div class="skills__item">
+          <div class="skill__name">JAVASCRIPT</div>
+          <div class="skills__container">
+            <div class="skills__percentage js">85%</div>
+          </div>
+        </div>
+    
+        <div class="skills__item">
+          <div class="skill__name">ANGULAR</div>
+          <div class="skills__container">
+            <div class="skills__percentage html">80%</div>
+          </div>
+        </div>
+    
+        <div class="skills__item">
+          <div class="skill__name">REACT</div>
+          <div class="skills__container">
+            <div class="skills__percentage css">90%</div>
+          </div>
+        </div>
+    
+        <div class="skills__item">
+          <div class="skill__name">FIGMA</div>
+          <div class="skills__container">
+            <div class="skills__percentage js">85%</div>
+          </div>
+        </div>
 
-    <div class="skills__item">
-      <div class="section__job">JAVASCRIPT</div>
-      <div class="skills__container">
-        <div class="skills__percentage js">85%</div>
       </div>
-    </div>
+      
   </section>
