Margin top del banner y footer
Margin top del banner y footer

--- a/src/app/components/about/about.component.css
+++ b/src/app/components/about/about.component.css
@@ -1,5 +1,7 @@
 .card {
+    border-radius: 0px 0px 5px 5px;
     border-bottom: 1px solid rgba(128, 128, 128, 0.356);
+    border-right: 1px solid rgba(128, 128, 128, 0.356);
     background-color: var(--light);
     margin-top: 0;
   }
