--- a/src/app/components/about/about.component.html
+++ b/src/app/components/about/about.component.html
@@ -1,25 +1,4 @@
-<section class="card container">
-    <div class="card__circle-button">
-      <div class="card__profile">
-        <img
-          src="./assets/profile-img.jpg"
-          alt=""
-          class="card__profile-img"
-        />
-      </div>
-    </div>
-    <div class="card__body">
-      <div class="card__info">
-        <h3 class="card__name">Ignacio Soler</h3>
-        <h4 class="card__job">Full Stack Developer Jr.</h4>
-        <h5 class="card__education">
-          ISCP Instituto Superior Politécnico Córdoba
-        </h5>
-        <h5 class="card__location">Santa Fe, Argentina</h5>
-        <p>
-          Estudiante de desarrollo web full stack. Apasionado por la
-          tecnología y el aprendizaje continuo.
-        </p>
-      </div>
-    </div>
-  </section>
+<section class="section container">
+  <h3 class="section__title">Acerca de</h3>
+  <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Necessitatibus assumenda quidem rerum neque porro, nesciunt maiores dolores cupiditate itaque molestias sunt. Suscipit debitis consectetur delectus ut, voluptate sit. Deserunt, Lorem ipsum dolor sit amet consectetur adipisicing elit. Laudantium ea nulla aperiam veniam fuga delectus, est voluptas corporis ratione, ducimus explicabo, aut porro nobis dolore rem vitae dolorem eum nostrum!</p>
+</section>
