--- a/src/app/components/card/card.component.html
+++ b/src/app/components/card/card.component.html
@@ -1,4 +1,4 @@
-<div class="banner container"></div>
+<app-banner></app-banner>
 <section class="card container">
     <div class="card__circle-button">
       <div class="card__profile">
@@ -23,4 +23,4 @@
         </p>
       </div>
     </div>
-</section>
+  </section>
