Datos dinámicos funcionando (a medias)

--- a/src/app/components/card/card.component.html
+++ b/src/app/components/card/card.component.html
@@ -11,8 +11,8 @@
     </div>
     <div class="card__body">
       <div class="card__info">
-        <h3 class="card__name">Ignacio Soler</h3>
-        <h4 class="card__job">Full Stack Developer Jr.</h4>
+        <h3 class="card__name">{{miPortfolio.nombre}}</h3>
+        <h4 class="card__job">{{miPortfolio.ocupation}}</h4>
         <h5 class="card__education">
           ISCP Instituto Superior Politécnico Córdoba
         </h5>
