Data binding funcionando

--- a/src/app/components/card/card.component.html
+++ b/src/app/components/card/card.component.html
@@ -3,7 +3,7 @@
     <div class="card__circle-button">
       <div class="card__profile">
         <img
-          src="./assets/profile-img.jpg"
+          [src]="miPortfolio.backImage"
           alt=""
           class="card__profile-img"
         />
