Experiencia y Educación de manera dinámica

--- a/src/app/components/card/card.component.html
+++ b/src/app/components/card/card.component.html
@@ -13,13 +13,10 @@
       <div class="card__info">
         <h3 class="card__name">{{miPortfolio.nombre}}</h3>
         <h4 class="card__job">{{miPortfolio.ocupation}}</h4>
-        <h5 class="card__education">
-          ISCP Instituto Superior Politécnico Córdoba
-        </h5>
-        <h5 class="card__location">Santa Fe, Argentina</h5>
+        <h5 class="card__company">{{miPortfolio.empresa}}</h5>
+        <h5 class="card__location">{{miPortfolio.location}}</h5>
         <p>
-          Estudiante de desarrollo web full stack. Apasionado por la
-          tecnología y el aprendizaje continuo.
+          {{miPortfolio.descripcion}}
         </p>
       </div>
     </div>
