--- a/src/app/components/educacion/educacion.component.css
+++ b/src/app/components/educacion/educacion.component.css
@@ -26,13 +26,13 @@
     padding-left: 0.8em;
   }
   
-  .section__job {
+  .section__inst {
     font-size: 1em;
     font-weight: 500;
     margin-bottom: 0.3em;
   }
   
-  .section__description {
+  .section__degree {
     font-size: 0.9em;
     line-height: 1.7em;
   }
