--- a/src/styles.css
+++ b/src/styles.css
@@ -43,6 +43,12 @@ body {
   border-radius: 5px;
 }
 
+ul {
+  margin-block-start: 0;
+  margin-block-end: 0;
+  padding-inline-start: 0;
+}
+
 /*Media queries*/
 @media only screen and (min-width: 480px) {
   .container {
